--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,15 @@
 {
     "compilerOptions": {
-        "outDir": "dist/mjs"
+        "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
+        "module": "commonjs",
+        "target": "es6",
+        "outDir": "dist"
     },
+    "exclude": [
+        "dist",
+        "node_modules",
+        "test"
+    ],
     "extends": "./node_modules/@chalkysticks/mrm-preset/tsconfig.mjs.json",
     "files": [
         "./src/Definition/Interface.d.ts"
