--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^4.13.0",
 		"@typescript-eslint/parser": "^4.13.0",
-		"esbuild": "^0.19.10",
+		"esbuild": "^0.19.11",
 		"eslint": "^7.17.0",
 		"tsx": "^4.7.0",
 		"typescript": "^5.2.2"
@@ -38,7 +38,6 @@
 		"pool"
 	],
 	"license": "GPL-3.0-or-later",
-	"main": "./build/esm/index.js",
 	"module": "./build/esm/index.js",
 	"name": "@chalkysticks/sdk-tv",
 	"repository": {
@@ -47,11 +46,11 @@
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json && yarn build:web",
-		"build:web": "./node_modules/.bin/esbuild src/index.ts --bundle --minify --sourcemap --target=chrome62 --format=esm --outfile=build/web/chalkysticks-tv.js",
+		"build:web": "esbuild src/index.ts --bundle --minify --sourcemap --target=chrome62 --format=esm --outfile=build/web/chalkysticks-tv.js",
 		"example": "http-server",
 		"test": "tsc --noEmit && node --import tsx --test test/*.spec.ts"
 	},
 	"type": "module",
 	"types": "build/esm/index.d.ts",
-	"version": "1.1.0"
+	"version": "1.2.0"
 }
